# newton

newton/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac
newton/data/: Blue.css  GNOME_NewtonApplet.server.in.in  GNOME_NewtonApplet.xml  Human.css  Makefile.am  newton.desktop.in  newton.glade  newton.lang  newton.schemas.in  newtonui.xml  preferences.glade
newton/debian/: changelog  control  copyright  files  newton.prerm.debhelper  rules
newton/po/: POTFILES.in
newton/scripts/: Makefile.am  newton  newton-applet
newton/src/: Alerts.py  Dialogs.py  Makefile.am  NewtonApplet.py  NewtonConfig.py  NewtonGui.py  NewtonMain.py  NewtonStock.py  NewtonUtils.py  NewtonWikiEng.py  NewtonWikiText.py  __init__.py.in
