NULL =

newtondir = $(pythondir)/newton

newton_PYTHON = 			\
	NewtonGui.py 		\
	__init__.py		\
	NewtonApplet.py		\
	NewtonMain.py 		\
	Alerts.py 		\
	Dialogs.py 		\
	NewtonUtils.py 		\
	NewtonWikiEng.py 	\
	NewtonWikiText.py 	\
	NewtonConfig.py 	\
	NewtonStock.py 		\
	$(NULL)

EXTRA_DATA = __init__.py.in
